# tech_playground

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GUIDE.md  README.md  docker-compose.yml  entrypoint.sh  populate_database.py  pyproject.toml
.github/workflows/: docker_img.yml  tests.yml
changelog.d/: add_calculations_endpoints.feat  add_cicd_pipelines.feat  add_database.feat  add_deploy_scripts.feat  add_response_endpoints.feat  template.md
deploy/: deploy.yml  docker-compose.yml.j2  inventory.ini  vars.yml
migrations/: env.py
migrations/versions/: 8de5ccd4aa1a_initial_version.py  e336a6cbad45_initial_database.py  fbf74856f1ab_add_response_indexes.py
playground_api/: app.py  custom_types.py  database.py  models.py  schemas.py  services.py  settings.py
playground_api/routes/: calculations_route.py  responses_route.py
tests/: conftest.py
tests/routes/: test_app.py  test_calculation_route.py  test_response_route.py
tests/services/: test_calculations_service.py  test_response_service.py
