[project]
name = "tech-playground"
version = "0.0.0"
description = "Pin People Test"
authors = [
    {name = "Elysson MR",email = "elyssonmr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "towncrier (>=25.8.0,<26.0.0)",
    "bump-my-version (>=1.2.6,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "gevent (>=25.9.1,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[tool.ruff]
line-length = 79
exclude = [
    "migrations"
]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["PLR6301"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."
addopts = " --cov=playground_api --cov-report term-missing -p no:warnings"
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
asyncio_default_test_loop_scope = 'session'

[tool.coverage.run]
omit = ["**/test*/**"]

[tool.towncrier]
package = "playground_api"
package_dir = "."
directory = "changelog.d"
filename = "CHANGELOG.md"
name = "FastAPI Template"
template = "changelog.d/template.md"

[[tool.towncrier.type]]
directory = "feat"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "chore"
name = "Other Tasks"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documents"
showcontent = true

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "playground_api/settings.py"
search = "version: str = '{current_version}'"
replace = "version: str = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run = "fastapi dev playground_api/app.py"
pre_test = "task format"
test = "pytest -vv"
post_test = "coverage html"
test_matching = "pytest -s -vv -k "
bump_major = "bump-my-version bump major --dry-run -v | grep 'New version will be' | sed -e 's/New version will be //' | xargs -n 1 towncrier build --yes --version && git commit -am \"Update CHANGELOG\" && bump-my-version bump major"
bump_minor = "bump-my-version bump minor --dry-run -v | grep 'New version will be' | sed -e 's/New version will be //' | xargs -n 1 towncrier build --yes --version && git commit -am \"Update CHANGELOG\" && bump-my-version bump minor"
bump_patch = "bump-my-version bump patch --dry-run -v | grep 'New version will be' | sed -e 's/New version will be //' | xargs -n 1 towncrier build --yes --version && git commit -am \"Update CHANGELOG\" && bump-my-version bump patch"
init_migration = "alembic init migrations"
migrate = "alembic upgrade head"
migration_history = "alembic history"
docker_build = "docker build -t \"playground_api\" ."
populate_db = "python populate_database.py"
